# instagram-emailer

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
instagram_emailer/: main.py
